VPC_A.tf
resource "aws_vpc" "VPC-A" {
    cidr_block = "10.0.0.0/16"

    tags = {
      Name = "VPC-A"
    }
}
