bastion_sg_B.tf
resource "aws_security_group" "bastion-sg-B" {
    vpc_id = aws_vpc.VPC-B.id

    ingress {
        from_port = 22
        to_port = 22
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    egress {
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }

    tags = {
      Name = "Bastion-SG-B"
    }
}
